  - [Jan 28, 99] [minor] Portuguese translation now in pure ascii using
    HTML "&" macros instead of accents (no changes in Portuguese displaying)
  - [Jan 16, 99] For update forms, changed text "Date" into "Date (d/m/y)"
    in english version to be sure there is no ambiguity.
  - [Jan 16, 99] Added declined forms.
  - [Jan 16, 99] Fixed typos in German version (Markus Mottl).

* Documentation
  - [Jan 26, 99] Fixed many typos in english version (Lars Gustavsson).
  - [Jan 25, 99] Added doc explaining consanguinity: new link in "directions
    for use".
  - [Jan 24, 99] Added doc for default photo name (new feature) in "directions
    for use", page "modifications", section 5.4 ("modify a person"),
    paragraph "Photo".
  - [Jan 24, 99] Fixed typo; was indicated "image" instead of "images" as
    directory name in this paragraph.
  - [Jan 22, 99] Added a few lines for "How to merge two families" in the
    page "modifications".
  - [Jan 20, 99] Added documentation for:
      * how to put links to GeneWeb databases.
      * how to customize welcome pages.
  - [Jan 11, 99] Swedish version (Lars Gustavsson).

GeneWeb Version 1.10
--------------------

* GeneWeb daemon/CGI (gwd)
  - [09/01/99] Fixed bug in CGI mode: images in directory "images/base"
    were sometimes not found.
  - [08/01/99] Changed term "consanguinity" into "relationship" in
    relationship computing (because confusion with the usual meaning of
    the term "consanguinity").
  - [06/01/99] Deleted Unix option "-robot_xcl": worked bad, did not detect
    robots, detected robots when there are not, too complicated to fix.
    (The normal HTTP robot exclusion remains.)
  - [28/12/98] Changed some http requests to hold no accents (should be
    continued...)
  - [19/12/98] Fixed bug quotes disappearing in field "first name aliases"
    in form Update/Person (if the value holds quotes).
  - [18/12/98] No more HTML "table" used in relationship links with