@@ -83,6 +83,14 @@ you must see something like this:
 
 <p>
 
+Some commands are somewhat talkative. You can redirect their display in
+a file by ending the command by "&gt;&nbsp;file". Example:
+<pre>
+     gwd -help &gt; foo.txt
+</pre>
+
+<p>
+
 <em>GeneWeb</em> databases are directories with the extension ".gwb".
 
 <h4> <a name="Gwc">Command gwc</a> </h4>
