@@ -86,6 +86,15 @@ vous devez voir quelque chose du genre:
 
 <p>
 
+Certaines commandes sont un peu bavardes. Vous pouvez rediriger leur
+affichage dans un fichier en les terminant par "&gt;&nbsp;fichier".
+Exemple:
+<pre>
+     gwd -help &gt; toto.txt
+</pre>
+
+<p>
+
 Les bases de donn&eacute;es <em>GeneWeb</em> sont des
 r&eacute;pertoires avec l'extension ".gwb".
 
