@@ -46,6 +46,8 @@ GeneWeb Version 1.11
   - [Jan 16, 99] Fixed typos in German version (Markus Mottl).
 
 * Documentation
+  - [Jan 29, 99] Added remark at end of introduction for how to redirect
+    the command displaying in a file.
   - [Jan 26, 99] Fixed many typos in english version (Lars Gustavsson).
   - [Jan 25, 99] Added doc explaining consanguinity: new link in "directions
     for use".
